--- a/css/style.css
+++ b/css/style.css
@@ -23,13 +23,15 @@ body{
 
 nav{
     background-color: var(--background-color);
-    box-shadow: 2px 8px 12px 2px;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, .50);
     /* float: left; */
     /* height: auto; */
     /* margin: 0px; */
     overflow: hidden;
     /* padding: 0px; */
     width: 100%;
+    position: sticky;
+    top: 0;
 }
 
 nav a{
