--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 @import 'constants.css';
+@import 'colors.css';
+@import 'forms.css';
+@import 'theme.css';
+@import 'toolbar.css';
 
 .backdrop{
     margin-top: -25%;
@@ -13,7 +17,7 @@
 }
 
 body{
-    background-color: var(--background-color);
+    background-color: var(--background);
     margin: 0%;
 }
 
@@ -22,7 +26,7 @@ body{
 }
 
 nav{
-    background-color: var(--background-color);
+    background-color: var(--background);
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, .50);
     /* float: left; */
     /* height: auto; */
@@ -32,11 +36,12 @@ nav{
     width: 100%;
     position: sticky;
     top: 0;
+    z-index: 100;
 }
 
 nav a{
     /* background-color: rgb(128, 128, 128); */
-    color: var(--text-color);
+    color: var(--background);
     float: left;
     padding: 0px 12px;
     text-decoration: none;
@@ -44,23 +49,35 @@ nav a{
 }
 
 nav a:link{
-    background-color: var(--background-color);
+    background-color: var(--background);
 }
 nav a:focus{
-    background-color: var(--link-focus);
+    background-color: var(--primary2);
+    color: var(--primary);
 }
 nav a:hover{
-    background-color: var(--link-hover);
+    background-color: var(--static);
 }
 nav a:active{
-    background-color: var(--link-active);
+    background-color: var(--primary3);
 }
 
 p, h1, h2, h3, h4, h5, h6{
     font-family: Arial, Helvetica, sans-serif;
-    color: var(--text-color);
+    color: var(--color);
 }
 
 li{
-    color: var(--text-color);
+    color: var(--color);
+}
+
+.parent::after {
+    /* background-color: rgba(230, 240, 255, 0.50); */
+    background-color: var(--color);
+    opacity: 0.80;
+}
+
+.shadow {
+    border-radius: 1px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1), 0 1px 8px rgba(0, 0, 0, 0.2);
 }
