--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,75 @@
-@import 'constants.css';
-@import 'colors.css';
-@import 'forms.css';
-@import 'theme.css';
-@import 'toolbar.css';
+@import url('theme.css');
+@import url('colors.css');
+@import url('dropdown.css');
+@import url('form.css');
+@import url('nav.css');
 
-.backdrop{
-    margin-top: -25%;
-    margin-left: 40%;
-    height: auto;
-    opacity: 0.25;
-    position: absolute;
-    padding: 27%;
-    width: 25%;
-    z-index: -1;
-    float: right;
-}
-
-body{
-    background-color: var(--background);
-    margin: 0%;
-}
-
-#content{
-    margin: var(--margin-large);
-}
-
-nav{
-    background-color: var(--background);
-    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, .50);
-    /* float: left; */
-    /* height: auto; */
-    /* margin: 0px; */
-    overflow: hidden;
-    /* padding: 0px; */
-    width: 100%;
-    position: sticky;
-    top: 0;
-    z-index: 100;
-}
-
-nav a{
-    /* background-color: rgb(128, 128, 128); */
-    color: var(--background);
-    float: left;
-    padding: 0px 12px;
-    text-decoration: none;
-    top: 0;
-}
-
-nav a:link{
-    background-color: var(--background);
-}
-nav a:focus{
-    background-color: var(--primary2);
-    color: var(--primary);
-}
-nav a:hover{
-    background-color: var(--static);
-}
-nav a:active{
-    background-color: var(--primary3);
-}
-
-p, h1, h2, h3, h4, h5, h6{
+a, h1, h2, h3, h4, h5, h6, label, p{
     font-family: Arial, Helvetica, sans-serif;
-    color: var(--color);
-}
-
-li{
-    color: var(--color);
 }
 
 .parent::after {
     /* background-color: rgba(230, 240, 255, 0.50); */
-    background-color: var(--color);
+    background-color: var(--primary);
     opacity: 0.80;
 }
+  
+.child::after {
+    /* background-color: rgba(230, 240, 255, 0.30); */
+    background-color: var(--primary);
+    opacity: 0.80;
+}
+  
+.shadow {
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2), 0 1px 8px rgba(0, 0, 0, 0.4);
+}
+
+/*body{
+    width: 95%;
+    height: auto;
+    margin: 2.5%;
+}*/
+
+body{
+    background-color: var(--background);
+    color: var(--color);
+    margin: 16px;
+}
+
+#content{
+    padding-top: 48px;
+}
+
+.description{
+    visibility: hidden;
+}
+
+footer{
+    padding: 50px;
+}
+
+header{
+    margin-top: -16px;
+    margin-bottom: -40px;
+    vertical-align: middle;
+}
+
+#sample-content{
+    padding: 25%;
+}
+
+section, header, nav, article, aside, footer{
+    display: block;
+}
+
+section{
+    width: 95%;
+    height: auto;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+}
+
+
 
 .shadow {
     border-radius: 1px;
