--- a/css/projects.css
+++ b/css/projects.css
@@ -14,8 +14,6 @@
     /* background-color: blue; */
     /* background-color: var(--projects-background-color); */
     height: auto;
+    /* align-content: center; */
 }
 
-.project-content{
-    position: relative;
-}
