--- a/css/items.css
+++ b/css/items.css
@@ -12,12 +12,11 @@
 
 .item-image{
     width: 100%;
-    height: 50%;
     /* height: 100%; */
     /* margin: 0px; */
     /* overflow: hidden; */
-    object-fit: cover;
     object-position: 50% 0%;
+    object-fit: cover;
     position: absolute;
 }
 
@@ -25,14 +24,32 @@
     width: 85%;
     margin: 5%;
     height: 300%;
-    top: 200px;
     /* top: 50px; */
     position: relative;
     padding: 2.5%;
-    margin-bottom: 300px;
+    
 }
 
 .item .title{
     font-size: x-large;
     text-align: center;
+}
+
+@media screen and (min-width: 500px){
+    .item-image{
+        height:  50%;
+    }
+    .item-content{
+        top: 200px;
+        margin-bottom: 300px;
+    }
+}
+@media screen and (max-width: 500px){
+    .item-image{
+        height:  45%;
+    }
+    .item-content{
+        top: 100px;
+        margin-bottom: 200px;
+    }
 }
