--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 a, h1, h2, h3, h4, h5, h6, label, p{
     font-family: Arial, Helvetica, sans-serif;
+    text-align: justify;
 }
 
 .parent::after {
