24w14d: Replace More Project content with JSON

--- a/css/items.css
+++ b/css/items.css
@@ -48,7 +48,7 @@
     font-weight: normal;
 }
 
-.item-content .title{
+.item-content .title, .item-content .category{
     text-align: center;
 }
 
