--- a/css/index.css
+++ b/css/index.css
@@ -6,18 +6,23 @@
 
 @import 'constants.css';
 
-#introduction{
-    display:flexbox;
+.introduction{
+    display: flexbox;
     vertical-align: middle;
 }
 
-#introduction-content{
+.introduction-content{
     margin: var(--margin-large);
     text-align: center;
+    
+}
+
+.introduction-content .title{
     font-size: xx-large;
 }
 
-img#introduction-image{
+
+img.introduction-image{
     margin-left: calc((100% - 25%) / 2);
     margin-right: calc((100% - 25%) / 2);
     width: calc(100% / 4);
