--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,17 @@ button, a, input, select, textarea {
     padding-top: 48px;
 }
 
+.dark{
+    color: white;
+}
+
 .description{
     visibility: hidden;
 }
 
 footer{
     padding: 50px;
+    /* background-color: black; */
 }
 
 header{
