24w17a: Headers and Font Family

--- a/css/elements.css
+++ b/css/elements.css
@@ -16,10 +16,10 @@
     margin: 2.5%;
 }
 
-.tiles{
-    /* margin-left: 2.5%; */
-    /* margin-right: 2.5%; */
-}
+/* .tiles{
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+} */
 
 table.tile-table{
     display: table;
