24w19a: Fix Sorting Algorithm, show sorting button, and hide 7 items.

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,11 @@ button, a, input, select, textarea {
     -webkit-tap-highlight-color: transparent;
 }
 
+.center{
+    width: 100%;
+    text-align: center;
+}
+
 #content{
     padding-top: 48px;
 }
